--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "framer-motion": "^11.0.12",
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "eslint": "^8",
